# TinyPcMonitor

./: .gitignore  Cargo.toml  LICENSE  README.md
csharp/: MonitorForm.cs  PCMonitor.csproj  app.manifest
src/: autostart.rs  main.rs  stats.rs  temp.rs
